--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!-- Copyright 2018 Google Inc.
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-    http://www.apache.org/licenses/LICENSE-2.0
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License. -->
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Use a data block to declare variables. -->
     <data>
-        <!-- Declare a variable by specifying a name and a data type. -->
-        <!-- Use fully qualified name for the type. -->
         <variable
             name="myName"
-            type="com.example.android.aboutme.MyName" />
+            type="com.mahdikaseatashin.aboutme.MyName" />
     </data>
 
     <LinearLayout
@@ -68,7 +54,6 @@ limitations under the License. -->
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/layout_margin"
-            android:fontFamily="@font/roboto"
             android:text="@string/done"
             android:textAlignment="center" />
 
@@ -96,4 +81,5 @@ limitations under the License. -->
 
         </ScrollView>
     </LinearLayout>
+
 </layout>
